Changed the systray icon, fixed the truncate's bug of the current file path scanned, improved the Scan view

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -316,9 +316,10 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
-        max-height: 130px; /* this can vary */
-        font-size: 13px;
+        max-height: 190px; /* this can vary */
+        font-size: 12px;
         color: #525659;
+        margin-top: -25px !important;
     }
 
     table.analyse * {
@@ -1100,4 +1101,10 @@
     }
     .tableOfScannedFiles {
       top: -40px !important;
+    }
+    .pullTop {
+      margin-top: -10px !important;
+    }
+    .pullBottom {
+      margin-top: -30px !important;
     }
